Fix pf-c-card background color for Add page in Dark mode

--- a/frontend/packages/dev-console/src/components/add/AddPageLayout.scss
+++ b/frontend/packages/dev-console/src/components/add/AddPageLayout.scss
@@ -52,4 +52,8 @@
   &__additional-hint-block {
     padding-bottom: var(--pf-global--spacer--md);
   }
+
+  .pf-c-card {
+    --pf-c-card--BackgroundColor: var(--pf-global--BackgroundColor--100);
+  }
 }
